<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="24dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_import_file_type"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView3">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/mrb_passvault_json"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passvault_json"
            app:useMaterialThemeColors="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/mrb_passvault_csv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/passvault_csv"
            app:useMaterialThemeColors="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/mrb_bitwarden_json"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/bitwarden_json"
            app:useMaterialThemeColors="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/mrb_keepass_csv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keepass_csv"
            app:useMaterialThemeColors="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/mrb_keepass_kdbx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/keepass_kdbx"
            app:useMaterialThemeColors="true" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/radio_group"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_proceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Proceed"
        app:layout_constraintEnd_toEndOf="@+id/radio_group"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_importer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>