<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:text="@string/generate_password"
        android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/materialTextView"
        tools:layout_editor_absoluteX="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/length" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="[16]" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/sbLength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="16"
            android:scaleX="1"
            android:scrollbarSize="12dp" />
    </LinearLayout>


    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/sb_uppercase"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uppercase_a_z"
        app:layout_constraintBottom_toBottomOf="@+id/sb_uppercase"
        app:layout_constraintStart_toEndOf="@+id/sb_uppercase"
        app:layout_constraintTop_toTopOf="@+id/sb_uppercase" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/sb_lowercase"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_uppercase" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/materialTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lowercase_a_z"
        app:layout_constraintBottom_toBottomOf="@+id/sb_lowercase"
        app:layout_constraintStart_toEndOf="@+id/sb_lowercase"
        app:layout_constraintTop_toTopOf="@+id/sb_lowercase" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/sb_numbers"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_lowercase" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numbers_0_9"
        app:layout_constraintBottom_toBottomOf="@+id/sb_numbers"
        app:layout_constraintStart_toEndOf="@+id/sb_numbers"
        app:layout_constraintTop_toBottomOf="@+id/sb_lowercase" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbSymbols"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sb_numbers" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/symbols"
        app:layout_constraintBottom_toBottomOf="@+id/cbSymbols"
        app:layout_constraintStart_toEndOf="@+id/cbSymbols"
        app:layout_constraintTop_toTopOf="@id/cbSymbols" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded"
        android:gravity="start|center_vertical"
        android:minHeight="54dp"
        android:paddingHorizontal="16dp"
        android:paddingVertical="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSymbols" />

</androidx.constraintlayout.widget.ConstraintLayout>